版本 1.2.1 - 插件热更新

--- a/csharp/GUI/Dialog/MessageDialog.xaml
+++ b/csharp/GUI/Dialog/MessageDialog.xaml
@@ -35,6 +35,8 @@
         </StackPanel>
         <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
             <Button
+                Height="40"
+                Width="75"
                 Style="{StaticResource MaterialDesignFlatButton}"
                 Foreground="{StaticResource ThemedIndigoBrush}"
                 materialDesign:ButtonAssist.CornerRadius="5"
