--- a/csharp/GUI/Dialog/AboutDialog.xaml
+++ b/csharp/GUI/Dialog/AboutDialog.xaml
@@ -36,7 +36,7 @@
                     <Binding Source="{x:Static config:Information.ApplicationVersion}" StringFormat="{}应用程序版本：{0}"/>
                 </TextBlock.Text>
             </TextBlock>
-            <TextBlock Text="预览版本 暂勿传播" Foreground="#f44336"/>
+            <!--<TextBlock Text="预览版本 暂勿传播" Foreground="#f44336"/>-->
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="10 5">
                 <StackPanel.Resources>
                     <Style TargetType="Button" BasedOn="{StaticResource MaterialDesignFlatDarkButton}">
@@ -46,23 +46,29 @@
                         <Setter Property="Padding" Value="0"/>
                         <Setter Property="Foreground" Value="{StaticResource ThemedHighContrastIndigoBrush}"/>
                         <Setter Property="materialDesign:ButtonAssist.CornerRadius" Value="5"/>
+                        <Setter Property="Focusable" Value="False"/>
                         <Setter Property="Command" Value="{x:Static local:RelayCommands.StartProcessCommand}"/>
                         <Setter Property="CommandParameter" Value="{Binding ToolTip, RelativeSource={RelativeSource Self}}"/>
                     </Style>
                 </StackPanel.Resources>
-                <Button ToolTip="{x:Static framework:ConstValues.AuthorHomePage}" Focusable="False">
+                <Button ToolTip="{x:Static framework:ConstValues.AuthorHomePage}">
                     <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="User" VerticalAlignment="Center" Margin="-3 0 2 0"/>
                         <TextBlock Text="作者主页" FontSize="14" Margin="2 0 2 0"/>
                     </StackPanel>
                 </Button>
-                <Button ToolTip="{x:Static config:Information.GitHubRepository}" Focusable="False">
+                <Button ToolTip="{x:Static config:Information.GitHubRepository}">
                     <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Github" VerticalAlignment="Center" Margin="-3 0 2 0"/>
                         <TextBlock Text="项目仓库" FontSize="14" Margin="2 0 2 0"/>
                     </StackPanel>
                 </Button>
             </StackPanel>
+            <TextBlock LineHeight="25">
+                <TextBlock.Text>
+                    <Binding Source="{x:Static framework:ConstValues.FeedbackQQGroup}" StringFormat="{}产品反馈交流 QQ 群：{0}"/>
+                </TextBlock.Text>
+            </TextBlock>
             <StackPanel>
                 <StackPanel.Resources>
                     <Style TargetType="TextBlock" BasedOn="{StaticResource MaterialDesignTextBlock}">
